# genai-workflow-starter

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  package.json  pnpm-workspace.yaml  turbo.json
agents/: graph.py
apps/api/: .env.example  main.py  pyproject.toml
apps/api/mcp/: client.py
apps/api/mcp/servers/filesystem/: __init__.py
apps/api/mcp/servers/web/: __init__.py
apps/api/observability/: __init__.py  cost_logger.py  middleware.py  tracing.py
apps/api/rag/: ingest.py
apps/api/tests/: test_health.py  test_rag_basic.py  test_tool_code_exec.py  test_tools_web_search.py
apps/api/tools/: __init__.py  code_exec_py.py  sql_query.py  vector_retrieve.py  web_search.py
apps/web/: next.config.js  package.json  tsconfig.json
apps/web/app/: layout.tsx
data/seed/: sample_documents.json
docs/: ARCHITECTURE.md  DECISIONS.md  EXTENDING.md  QUICKSTART.md
